--- a/src/partials/statistic-list.html
+++ b/src/partials/statistic-list.html
@@ -43,8 +43,10 @@
                 <div class="statistic-info-bottom">
                     <div class="statistic-info-bottom-title">Latest Bonus:</div>
                     <div class="statistic-info-bottom-text">
-                        <p>10 EUR No Deposit Bonus</p>
-                        <p>at Super Casino</p>
+                        <a href="">
+                            <p>10 EUR No Deposit Bonus</p>
+                            <p>at Super Casino</p>
+                        </a>
                     </div>
                 </div>
                 <div class="statistic-info-button">
@@ -93,8 +95,10 @@
                 <div class="statistic-info-bottom">
                     <div class="statistic-info-bottom-title">Latest Bonus:</div>
                     <div class="statistic-info-bottom-text">
-                        <p>10 EUR No Deposit Bonus</p>
-                        <p>at Super Casino</p>
+                        <a href="">
+                            <p>10 EUR No Deposit Bonus</p>
+                            <p>at Super Casino</p>
+                        </a>
                     </div>
                 </div>
                 <div class="statistic-info-button">
@@ -140,8 +144,10 @@
                 <div class="statistic-info-bottom">
                     <div class="statistic-info-bottom-title">Latest Bonus:</div>
                     <div class="statistic-info-bottom-text">
-                        <p>10 EUR No Deposit Bonus</p>
-                        <p>at Super Casino</p>
+                        <a href="">
+                            <p>10 EUR No Deposit Bonus</p>
+                            <p>at Super Casino</p>
+                        </a>
                     </div>
                 </div>
                 <div class="statistic-info-button">
@@ -187,8 +193,58 @@
                 <div class="statistic-info-bottom">
                     <div class="statistic-info-bottom-title">Latest Bonus:</div>
                     <div class="statistic-info-bottom-text">
-                        <p>10 EUR No Deposit Bonus</p>
-                        <p>at Super Casino</p>
+                        <a href="">
+                            <p>10 EUR No Deposit Bonus</p>
+                            <p>at Super Casino</p>
+                        </a>
+                    </div>
+                </div>
+                <div class="statistic-info-button">
+                    <a href="#" class="button-blue">
+                        <span>MORE INFO</span>
+                    </a>
+                </div>
+            </div>
+
+        </div>
+        <div class="statistic-content cfix">
+
+            <div class="statistic-content-svg" itemprop="aggregateRating" itemscope itemtype="http://schema.org/AggregateRating">
+                <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 130 130" itemprop="ratingValue" data-green=5 data-blue=5>
+
+                    <circle cx="65" cy="65" r="58" stroke="#e6e6e6" stroke-width="14" fill="none" />
+                    <circle cx="65" cy="65" r="45" stroke="#e6e6e6" stroke-width="8" fill="none" />
+
+                    <circle class="green-value" cx="65" cy="65" r="58" stroke="#a5d000" stroke-width="14" fill="none" />
+                    <circle class="blue-value" cx="65" cy="65" r="45" stroke="#336699" stroke-width="8" fill="none" />
+
+                    <text class="green-text" x=50% y=50% text-anchor="middle"></text>
+                    <text class="blue-text" x=50% y=65% text-anchor="middle"></text>
+
+                </svg>
+            </div>
+
+            <div class="statistic-content-logo">
+                <div class="satistic-img">
+                    <img src="images/statistic-casino-1.png" alt="" itemprop="images"/>
+                </div>
+            </div>
+
+            <div class="static-content-info">
+                <div class="static-info-title" itemprop="name">Super Mega Casino Rewiew</div>
+                <div class="static-info-top">
+                    <div class="static-info-flag">
+                        <img src="images/flags/Sweden.png" alt="" />
+                    </div>
+                    <div class="static-info-top-text">Players from your country accepted</div>
+                </div>
+                <div class="statistic-info-bottom">
+                    <div class="statistic-info-bottom-title">Latest Bonus:</div>
+                    <div class="statistic-info-bottom-text">
+                        <a href="">
+                            <p>10 EUR No Deposit Bonus</p>
+                            <p>at Super Casino</p>
+                        </a>
                     </div>
                 </div>
                 <div class="statistic-info-button">
