--- a/src/partials/login-form.html
+++ b/src/partials/login-form.html
@@ -39,6 +39,24 @@
                 <span>/</span>
                 <a href="#">Login FAQ</a>
                 </div>
+                
+                <div class="form-socials">
+                    <div class="form-socials-text">Sign Up With</div>
+                    <div class="form-socials-wrap">
+                        <a href="#">
+                            <img src="images/social-1-w.png" alt="">
+                        </a>
+                        <a href="#">
+                            <img src="images/social-2-w.png" alt="">
+                        </a>
+                        <a href="#">
+                            <img src="images/social-3-w.png" alt="">
+                        </a>
+                        <a href="#">
+                            <img src="images/social-4-w.png" alt="">
+                        </a>
+                    </div>
+                </div>
 
             </div>
         </form>
