--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -45,15 +45,15 @@
                 </ul>
             </nav>
             <div class="social">
-                <ul>
-                    <li><a href="#" target="_blank"><img src="images/social-1.png" alt=""><img src="images/social-1-w.png" alt="" class="mobile-show"></a></li>
+                <div class="soc-wrap">
+                    <b><a href="#" target="_blank"><img src="images/social-1.png" alt=""><img src="images/social-1-w.png" alt="" class="mobile-show"></a></b>
                     <span class="soc-mob">
                         <span class="green-arrow"></span>
-                        <li><a href="#" target="_blank"><img src="images/social-2.png" alt=""><img src="images/social-2-w.png" alt="" class="mobile-show"></a></li>
-                        <li><a href="#" target="_blank"><img src="images/social-3.png" alt=""><img src="images/social-3-w.png" alt="" class="mobile-show"></a></li>
-                        <li><a href="#" target="_blank"><img src="images/social-4.png" alt=""><img src="images/social-4-w.png" alt="" class="mobile-show"></a></li>
+                        <b><a href="#" target="_blank"><img src="images/social-2.png" alt=""><img src="images/social-2-w.png" alt="" class="mobile-show"></a></b>
+                        <b><a href="#" target="_blank"><img src="images/social-3.png" alt=""><img src="images/social-3-w.png" alt="" class="mobile-show"></a></b>
+                        <b><a href="#" target="_blank"><img src="images/social-4.png" alt=""><img src="images/social-4-w.png" alt="" class="mobile-show"></a></b>
                     </span>
-                </ul>
+                </div>
             </div>
         </div>
     </div>
