--- a/src/sass/adaptation_scss/adaptation_develop_4.scss
+++ b/src/sass/adaptation_scss/adaptation_develop_4.scss
@@ -24,12 +24,12 @@
         .bottom-head{overflow: inherit;}
         .bottom-head nav{width: calc(100% - 66px);}
         .bottom-head .social{width: 65px;overflow: inherit;position: relative;
-            ul{display: block;}
-            &>ul li{width: 100%;height: 100%;}
+            .soc-wrap{display: block;}
+            &>.soc-wrap b{width: 100%;height: 100%;}
 
             .soc-mob{width: 100%;position: absolute;display: block;top: 100%;left: 0;height: 100%;
                 .green-arrow{position: absolute;display: block;top: 0;left: 0;width: 100%;border-left: 33px solid transparent;border-right: 33px solid transparent;border-top: 15px solid #a5d000;z-index: 25;height: 15px;}
-                li{width: 100%;height: 100%;background-color: #fff;border-bottom:2px solid #dddddd;display: none;
+                b{width: 100%;height: 100%;background-color: #fff;border-bottom:2px solid #dddddd;display: none;margin-bottom: -2px;
                     &:hover{opacity: 1;}
                 }
             }
@@ -94,12 +94,12 @@
         }
 
         .bottom-head .social{width: 35%;
-            ul{display: flex;}
-            &>ul li{width: 25%;border:none;}
+            .soc-wrap{display: flex;}
+            &>.soc-wrap b{width: 25%;border:none;}
 
             .soc-mob{width: 75%;position: static;display: flex;
                 .green-arrow{display: none;}
-                li{display: block !important;width: 33.33%;background-color: transparent;border:none;}
+                b{display: block !important;width: 33.33%;background-color: transparent;border:none;}
             }
             .green-arrow{}
             a{
