--- a/src/partials/casino-list.html
+++ b/src/partials/casino-list.html
@@ -4,7 +4,9 @@
             <h2>RECENT POSTS FROM ALL CATEGORIES</h2>
         </div>
         <div class="content">
+
             <div class="item-list">
+
                 <div class="item" itemprop="author">
                     <div class="left-it">
                         <img src="images/rg451.png" alt="" itemprop="image">
@@ -30,6 +32,7 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="item" itemprop="author">
                     <div class="left-it">
                         <img src="images/rg451.png" alt="" itemprop="image">
@@ -55,6 +58,7 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="item" itemprop="author">
                     <div class="left-it">
                         <img src="images/rg451.png" alt="" itemprop="image">
@@ -80,6 +84,7 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="item" itemprop="author">
                     <div class="left-it">
                         <img src="images/rg452.png" alt="" itemprop="image">
@@ -94,6 +99,7 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="item" itemprop="author">
                     <div class="left-it">
                         <img src="images/rg453.png" alt="" itemprop="image">
@@ -108,15 +114,16 @@
                         </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="paginator">
-                <a href="" class="previouspostslink"></a>
-                <a href="">1</a>
-                <span class="current">2</span>
-                <a href="">3</a>
-                <a href="">4</a>
-                <a href="" class="nextpostslink"></a>
+                <div class="paginator">
+                    <a href="#" class="previouspostslink"></a>
+                    <a href="#">1</a>
+                    <span class="current">2</span>
+                    <a href="#">3</a>
+                    <a href="#">4</a>
+                    <a href="#" class="nextpostslink"></a>
+                </div>
+
             </div>
 
         </div>
