--- a/src/partials/second-block.html
+++ b/src/partials/second-block.html
@@ -7,91 +7,111 @@
             <div class="top-text">The entire logo is used to convey the meaning intendend and avoid ternishing or misrepresenting the intendent image</div>
             <div class="item-table">
                 <div class="item" itemprop="author">
-                    <div class="con1">
-                        <img src="images/cs1.png" alt="" itemprop="image">
-                    </div>
-                    <div class="con2" itemprop="name"> Casino nomer 1 </div>
+                    <a href="#" class="item-link">
+                        <div class="con1">
+                            <img src="images/rg451.png" alt="" itemprop="image">
+                        </div>
+                        <div class="con2" itemprop="name"> Casino nomer 1 </div>
+                    </a>
                     <div class="con3">
                         <a href="" class="button-green">PLAY</a>
                     </div>
                 </div>
                 <div class="item" itemprop="author">
-                    <div class="con1">
-                        <img src="images/cs2.png" alt="" itemprop="image">
-                    </div>
-                    <div class="con2" itemprop="name"> Casino nomer 2 </div>
+                    <a href="#" class="item-link">
+                        <div class="con1">
+                            <img src="images/cs2.png" alt="" itemprop="image">
+                        </div>
+                        <div class="con2" itemprop="name"> Casino nomer 2 </div>
+                    </a>
                     <div class="con3">
                         <a href="" class="button-green">PLAY</a>
                     </div>
                 </div>
                 <div class="item" itemprop="author">
-                    <div class="con1">
-                        <img src="images/cs3.png" alt="" itemprop="image">
-                    </div>
-                    <div class="con2" itemprop="name"> Casino nomer 3 </div>
+                    <a href="#" class="item-link">
+                        <div class="con1">
+                            <img src="images/cs3.png" alt="" itemprop="image">
+                        </div>
+                        <div class="con2" itemprop="name"> Casino nomer 3 </div>
+                    </a>
                     <div class="con3">
                         <a href="" class="button-green">PLAY</a>
                     </div>
                 </div>
                 <div class="item" itemprop="author">
-                    <div class="con1">
-                        <img src="images/cs4.png" alt="" itemprop="image">
-                    </div>
-                    <div class="con2" itemprop="name"> Casino nomer 4 </div>
+                    <a href="#" class="item-link">
+                        <div class="con1">
+                            <img src="images/cs4.png" alt="" itemprop="image">
+                        </div>
+                        <div class="con2" itemprop="name"> Casino nomer 4 </div>
+                    </a>
                     <div class="con3">
                         <a href="" class="button-green">PLAY</a>
                     </div>
                 </div>
                 <div class="item" itemprop="author">
-                    <div class="con1">
-                        <img src="images/cs5.png" alt="" itemprop="image">
-                    </div>
-                    <div class="con2" itemprop="name"> Casino nomer 5 </div>
+                    <a href="#" class="item-link">
+                        <div class="con1">
+                            <img src="images/cs5.png" alt="" itemprop="image">
+                        </div>
+                        <div class="con2" itemprop="name"> Casino nomer 5 </div>
+                    </a>
                     <div class="con3">
                         <a href="" class="button-green">PLAY</a>
                     </div>
                 </div>
                 <div class="item" itemprop="author">
-                    <div class="con1">
-                        <img src="images/cs1.png" alt="" itemprop="image">
-                    </div>
-                    <div class="con2" itemprop="name"> Casino nomer 1 </div>
+                    <a href="#" class="item-link">
+                        <div class="con1">
+                            <img src="images/cs1.png" alt="" itemprop="image">
+                        </div>
+                        <div class="con2" itemprop="name"> Casino nomer 1 </div>
+                    </a>
                     <div class="con3">
                         <a href="" class="button-green">PLAY</a>
                     </div>
                 </div>
                 <div class="item" itemprop="author">
-                    <div class="con1">
-                        <img src="images/cs2.png" alt="" itemprop="image">
-                    </div>
-                    <div class="con2" itemprop="name"> Casino nomer 2 </div>
+                    <a href="#" class="item-link">
+                        <div class="con1">
+                            <img src="images/cs2.png" alt="" itemprop="image">
+                        </div>
+                        <div class="con2" itemprop="name"> Casino nomer 2 </div>
+                    </a>
                     <div class="con3">
                         <a href="" class="button-green">PLAY</a>
                     </div>
                 </div>
                 <div class="item" itemprop="author">
-                    <div class="con1">
-                        <img src="images/cs3.png" alt="" itemprop="image">
-                    </div>
-                    <div class="con2" itemprop="name"> Casino nomer 3 </div>
+                    <a href="#" class="item-link">
+                        <div class="con1">
+                            <img src="images/cs3.png" alt="" itemprop="image">
+                        </div>
+                        <div class="con2" itemprop="name"> Casino nomer 3 </div>
+                    </a>
                     <div class="con3">
                         <a href="" class="button-green">PLAY</a>
                     </div>
                 </div>
                 <div class="item" itemprop="author">
-                    <div class="con1">
-                        <img src="images/cs4.png" alt="" itemprop="image">
-                    </div>
-                    <div class="con2" itemprop="name"> Casino nomer 4 </div>
+                    <a href="#" class="item-link">
+                        <div class="con1">
+                            <img src="images/cs4.png" alt="" itemprop="image">
+                        </div>
+                        <div class="con2" itemprop="name"> Casino nomer 4 </div>
+                    </a>
                     <div class="con3">
                         <a href="" class="button-green">PLAY</a>
                     </div>
                 </div>
                 <div class="item" itemprop="author">
-                    <div class="con1">
-                        <img src="images/cs5.png" alt="" itemprop="image">
-                    </div>
-                    <div class="con2" itemprop="name"> Casino nomer 5 </div>
+                    <a href="#" class="item-link">
+                        <div class="con1">
+                            <img src="images/cs5.png" alt="" itemprop="image">
+                        </div>
+                        <div class="con2" itemprop="name"> Casino nomer 5 </div>
+                    </a>
                     <div class="con3">
                         <a href="" class="button-green">PLAY</a>
                     </div>
@@ -107,91 +127,111 @@
             <div class="top-text">The entire logo is used to convey the meaning intendend and avoid ternishing or misrepresenting the intendent image</div>
             <div class="item-table">
                 <div class="item" itemprop="author">
-                    <div class="con1">
-                        <img src="images/cs1.png" alt="" itemprop="image">
-                    </div>
-                    <div class="con2" itemprop="name"> Casino nomer 1 </div>
+                    <a href="#" class="item-link">
+                        <div class="con1">
+                            <img src="images/cs1.png" alt="" itemprop="image">
+                        </div>
+                        <div class="con2" itemprop="name"> Casino nomer 1 </div>
+                    </a>
                     <div class="con3">
                         <a href="" class="button-green">PLAY</a>
                     </div>
                 </div>
                 <div class="item" itemprop="author">
-                    <div class="con1">
-                        <img src="images/cs2.png" alt="" itemprop="image">
-                    </div>
-                    <div class="con2" itemprop="name"> Casino nomer 2 </div>
+                    <a href="#" class="item-link">
+                        <div class="con1">
+                            <img src="images/cs2.png" alt="" itemprop="image">
+                        </div>
+                        <div class="con2" itemprop="name"> Casino nomer 2 </div>
+                    </a>
                     <div class="con3">
                         <a href="" class="button-green">PLAY</a>
                     </div>
                 </div>
                 <div class="item" itemprop="author">
-                    <div class="con1">
-                        <img src="images/cs3.png" alt="" itemprop="image">
-                    </div>
-                    <div class="con2" itemprop="name"> Casino nomer 3 </div>
+                    <a href="#" class="item-link">
+                        <div class="con1">
+                            <img src="images/cs3.png" alt="" itemprop="image">
+                        </div>
+                        <div class="con2" itemprop="name"> Casino nomer 3 </div>
+                    </a>
                     <div class="con3">
                         <a href="" class="button-green">PLAY</a>
                     </div>
                 </div>
                 <div class="item" itemprop="author">
-                    <div class="con1">
-                        <img src="images/cs4.png" alt="" itemprop="image">
-                    </div>
-                    <div class="con2" itemprop="name"> Casino nomer 4 </div>
+                    <a href="#" class="item-link">
+                        <div class="con1">
+                            <img src="images/cs4.png" alt="" itemprop="image">
+                        </div>
+                        <div class="con2" itemprop="name"> Casino nomer 4 </div>
+                    </a>
                     <div class="con3">
                         <a href="" class="button-green">PLAY</a>
                     </div>
                 </div>
                 <div class="item" itemprop="author">
-                    <div class="con1">
-                        <img src="images/cs5.png" alt="" itemprop="image">
-                    </div>
-                    <div class="con2" itemprop="name"> Casino nomer 5 </div>
+                    <a href="#" class="item-link">
+                        <div class="con1">
+                            <img src="images/cs5.png" alt="" itemprop="image">
+                        </div>
+                        <div class="con2" itemprop="name"> Casino nomer 5 </div>
+                    </a>
                     <div class="con3">
                         <a href="" class="button-green">PLAY</a>
                     </div>
                 </div>
                 <div class="item" itemprop="author">
-                    <div class="con1">
-                        <img src="images/cs1.png" alt="" itemprop="image">
-                    </div>
-                    <div class="con2" itemprop="name"> Casino nomer 1 </div>
+                    <a href="#" class="item-link">
+                        <div class="con1">
+                            <img src="images/cs1.png" alt="" itemprop="image">
+                        </div>
+                        <div class="con2" itemprop="name"> Casino nomer 1 </div>
+                    </a>
                     <div class="con3">
                         <a href="" class="button-green">PLAY</a>
                     </div>
                 </div>
                 <div class="item" itemprop="author">
-                    <div class="con1">
-                        <img src="images/cs2.png" alt="" itemprop="image">
-                    </div>
-                    <div class="con2" itemprop="name"> Casino nomer 2 </div>
+                    <a href="#" class="item-link">
+                        <div class="con1">
+                            <img src="images/cs2.png" alt="" itemprop="image">
+                        </div>
+                        <div class="con2" itemprop="name"> Casino nomer 2 </div>
+                    </a>
                     <div class="con3">
                         <a href="" class="button-green">PLAY</a>
                     </div>
                 </div>
                 <div class="item" itemprop="author">
-                    <div class="con1">
-                        <img src="images/cs3.png" alt="" itemprop="image">
-                    </div>
-                    <div class="con2" itemprop="name"> Casino nomer 3 </div>
+                    <a href="#" class="item-link">
+                        <div class="con1">
+                            <img src="images/cs3.png" alt="" itemprop="image">
+                        </div>
+                        <div class="con2" itemprop="name"> Casino nomer 3 </div>
+                    </a>
                     <div class="con3">
                         <a href="" class="button-green">PLAY</a>
                     </div>
                 </div>
                 <div class="item" itemprop="author">
-                    <div class="con1">
-                        <img src="images/cs4.png" alt="" itemprop="image">
-                    </div>
-                    <div class="con2" itemprop="name"> Casino nomer 4 </div>
+                    <a href="#" class="item-link">
+                        <div class="con1">
+                            <img src="images/cs4.png" alt="" itemprop="image">
+                        </div>
+                        <div class="con2" itemprop="name"> Casino nomer 4 </div>
+                    </a>
                     <div class="con3">
                         <a href="" class="button-green">PLAY</a>
                     </div>
                 </div>
                 <div class="item" itemprop="author">
-                    <div class="con1">
-                        <img src="images/cs5.png" alt="" itemprop="image">
-                    </div>
-                    <div class="con2" itemprop="name"> Casino nomer 5 </div>
+                    <a href="#" class="item-link">
+                        <div class="con1">
+                            <img src="images/cs5.png" alt="" itemprop="image">
+                        </div>
+                        <div class="con2" itemprop="name"> Casino nomer 5 </div>
+                    </a>
                     <div class="con3">
                         <a href="" class="button-green">PLAY</a>
                     </div>
