--- a/src/sass/develop_scss/develop_2.scss
+++ b/src/sass/develop_scss/develop_2.scss
@@ -18,7 +18,9 @@
     span, a{display: inline-block; vertical-align: middle; min-width: 25px; padding: 0 4px; min-height: 25px;  line-height: 25px; text-decoration: none; background-image: -moz-linear-gradient( 90deg, #bebebe 0%, #bebebe 0%, #bebebe 100%); background-image: -webkit-linear-gradient( 90deg, #bebebe 0%, #bebebe 0%, #bebebe 100%); background-image: -ms-linear-gradient( 90deg, #bebebe 0%, #bebebe 0%, #bebebe 100%); transition: all 2s; margin: 0 3px; font-size: 16px; font-family: "Arial", sans-serif; color: rgb(255, 255, 255); font-weight: bold;
         &:hover, &.current{background-image: -moz-linear-gradient( 90deg, rgb(56,159,0) 0%, rgb(146,183,0) 0%, rgb(180,226,1) 100%); background-image: -webkit-linear-gradient( 90deg, rgb(56,159,0) 0%, rgb(146,183,0) 0%, rgb(180,226,1) 100%); background-image: -ms-linear-gradient( 90deg, rgb(56,159,0) 0%, rgb(146,183,0) 0%, rgb(180,226,1) 100%);}
     }
-
+    a{
+        &.previouspostslink, &.nextpostslink{font-size: 0;color:transparent;line-height: 0;}
+    }
     a.previouspostslink{ margin-right: 20px; min-width: 10px; width: 10px; min-height: 12px; position: relative; padding: 0;
         &:before{content: ''; width: 0; height: 0; border-style: solid; border-width: 6px 10px 0 0; border-color: white transparent transparent transparent; position: absolute; top: 0; left: 0;}
         &:after{content: ''; width: 0; height: 0; border-style: solid; border-width: 6px 0 0 10px; border-color: transparent transparent transparent white;  position: absolute; bottom: 0; left: 0;}
@@ -69,12 +71,19 @@
     .conteiner{
         .content{ padding: 20px;
             .top-text{font-size: 12px; font-family: "Arial", sans-serif; color: rgb(101, 101, 101); line-height: 1.2; padding-bottom: 10px; }
-            .item-table{ display: table;
-                .item{ width: 100%; text-align: center; padding: 5px 0;
-                    .con1{display: table-cell; vertical-align: middle; width: 85px; }
-                    .con2{display: table-cell; vertical-align: middle; font-size: 13px; font-family: "Arial", sans-serif; color: rgb(83, 83, 83); line-height: 1.2; width: 114px;}
-                    .con3{display: table-cell; vertical-align: middle; padding: 0 7px;
-                        a{text-decoration: none;}
+            .item-table{
+                .item{ width: 100%; text-align: center; padding: 5px 0;display: flex;align-items:center;justify-content:space-around;flex-wrap:wrap;
+                    .item-link{display: flex;align-items:center;justify-content:space-around;width: 66.66%; font-family: "Arial", sans-serif; color: rgb(83, 83, 83); line-height: 1.2;text-decoration: none;
+                        &:hover{
+                            .con2{text-decoration: underline;}
+                        }
+                    }
+                    .con1{ max-width: 85px;width: 100%; }
+                    .con2{ font-size: 13px;}
+                    .con3{ padding: 0 7px;width: 33.33%;
+                        a{text-decoration: none;
+                            &.button-green{width: 100%;justify-content:center;}
+                        }
                     }
                 }
             }
