fix radiks flag

--- a/src/sass/develop_scss/develop_4.scss
+++ b/src/sass/develop_scss/develop_4.scss
@@ -76,7 +76,7 @@ header{position: relative;z-index: 15;
     }
     .flag{position: absolute;width: 67px;min-height: 65px;background-color: #a5d000;color: white;text-transform: uppercase;text-align: center;top: 0;left: 4%;z-index: 15;
         span{padding-top: 20px;font-weight: bold;display: inline-block;}
-        &:after{content: "";position: absolute;left: 0;bottom: 0;width: 0;height: 0;border-bottom: 13px solid #000;border-left: 33.5px solid #a5d000;border-right: 33.5px solid #a5d000;z-index: 10;}
+        &:after{content: "";position: absolute;left: 0;top: 100%;width: 0;height: 0;border-bottom: 13px solid transparent;border-left: 33px solid #a5d000;border-right: 34px solid #a5d000;z-index: 10;}
     }
 }
 /*/main-baner*/
