grayscale to images added

--- a/src/partials/casino-list.html
+++ b/src/partials/casino-list.html
@@ -14,7 +14,7 @@
                     <div class="right-it">
                         <h5 itemprop="name" >10 EUR No Deposit Bonus at Super Casino</h5>
                         <p>
-                            <img src="images/flag1.png" alt="">
+                            <img src="images/flag1.png" alt="" class="not-accepted" />
                             <span>Players from your country accepted</span>
                         </p>
                         <table class="decript" itemprop="description">
