--- a/src/sass/develop_scss/develop_2.scss
+++ b/src/sass/develop_scss/develop_2.scss
@@ -136,7 +136,7 @@
 
 /* flag styles */
 
-    .flag-wrap{display:inline-block;position:relative;
+    .flag-wrap{display:inline-block;position:relative;vertical-align: middle;
         &:before, &:after{content:"";display: block;position: absolute;left:calc(50% - 2px);top:calc(50% - 13px);width: 3px;height: 26px;background-color: tomato;opacity:0;transform-origin:50% 50%;border-radius: 3px;}
         &:before{transform:rotate(45deg);}
         &:after{transform:rotate(-45deg);}
