--- a/src/sass/develop_scss/develop_2.scss
+++ b/src/sass/develop_scss/develop_2.scss
@@ -1,6 +1,6 @@
 /* title */
 
-.title-text{font-size: 18px; background-color: white; font-family: "Arial", sans-serif; color: rgb(165, 208, 0);  font-weight: bold; line-height: 1.2; width: 100%; border-bottom: 2px solid #dddddd; border-top: 2px solid #dddddd; line-height: 56px; padding-left: 20px;}
+.title-text{font-size: 18px; background-color: white; font-family: "Arial", sans-serif; color: rgb(165, 208, 0);  font-weight: bold; line-height: 26px; width: 100%; border-bottom: 2px solid #dddddd; border-top: 2px solid #dddddd; padding-left: 20px;padding-top: 10px;padding-bottom: 10px;}
 
 /* title */
 
